css/style.css
/* **************************** */
/*             CSS Reset        */
/* **************************** */

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role="list"],
ol[role="list"] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }

  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}
/* **************************** */
/*             Styles           */
/* **************************** */

body {
  font-family: "Karla", sans-serif;
}
/* **************************** */
/*             Nav              */
/* **************************** */
.view-plan-button {
  padding: 1rem 2rem;
  background: none;
  color: hsl(270, 9%, 17%);
  border: 1px solid hsl(270, 9%, 17%);
  margin-bottom: 5rem;
  text-transform: uppercase;
  text-decoration: none;
  cursor: pointer;
  transition: background 0.5s, color 0.5s;
}
.view-plan-button:hover,
.view-plan-button:focus {
  background: hsl(270, 9%, 17%);
  color: #fff;
}
.header {
  display: flex;
  padding: 1rem 5rem;

  max-width: 80rem;
  margin: auto;
  justify-content: space-between;
}
.nav-logo {
  height: 100%;
  align-self: center;
}
.nav-list {
  display: flex;
  gap: 1.5rem;
}

.nav-list a:not(.view-plan-button) {
  text-decoration: none;
  color: hsl(273, 4%, 51%);
}
.nav-list li {
  list-style-type: none;
}

/* **************************** */
/*             Hero             */
/* **************************** */
.hero {
  background-color: hsl(256, 26%, 20%);
  color: #fff;
  position: relative;
}

/* .content_container {
  position: relative;
  background-color: blue;
} */

.left-svg {
  background: url("../images/bg-pattern-intro-left-mobile.svg");
  background-size: contain;
  background-repeat: no-repeat;
  width: 10rem;
  height: 10rem;
  position: absolute;
  bottom: 7;
  z-index: 1;
}
.right-svg {
  background: url("../images/bg-pattern-intro-right-mobile.svg");
  background-size: contain;
  background-repeat: no-repeat;
  width: 11rem;
  height: 40rem;
  position: absolute;
  bottom: -30rem;
  right: 0;
  z-index: 1;
}
.hero-img {
  position: relative;
  width: 100%;
  max-height: 40rem;
  object-fit: cover;
  z-index: 3;
}
.hero-text {
  text-align: center;
  padding-left: 1rem;
  padding-right: 1rem;
  z-index: 3;
  position: relative;
}
.hero-title {
  font-family: "DM Serif Display", serif;
  font-size: 3rem;
  letter-spacing: 0.1rem;
  line-height: 3rem;
  font-weight: 400;
  padding-top: 3rem;
  padding-bottom: 2rem;
  z-index: 3;
}
.hero-description {
  margin-bottom: 2rem;
}
.hero-button {
  color: #fff;
  border: 1px solid #fff;
}

.hero-button:hover,
.hero-button:focus {
  background: #fff;
  color: hsl(256, 26%, 20%);
}

@media (min-width: 767px) {
  .hero {
    display: flex;
    justify-content: center;
    padding-left: 5rem;
    padding-right: 5rem;
    padding-top: 5rem;
    max-height: 35rem;
  }

  .hero-text {
    order: -1;
    padding-left: 0;
    max-width: 40rem;
    justify-self: flex-start;
    text-align: left;
  }
  .hero-title::before {
    content: " ";
    display: block;
    width: 7rem;
    height: 3rem;
    border-top: 1px solid #fff;
  }
  .hero-title {
    margin-top: 0;
  }
  .hero-img {
    /* width: max(100%, 40rem); */
    max-width: 30rem;
    /* position: relative;
    right: 20%;
    top: 50%; */
    position: relative;
    top: 0%;
  }

  .left-svg {
    background: url("../images/bg-pattern-intro-left-desktop.svg");
    background-size: contain;
    width: 100%;
    height: 100%;
    background-repeat: no-repeat;
    position: absolute;
    bottom: -20rem;
    left: 0;
    z-index: 3;
  }
  .right-svg {
    background: url("../images/bg-pattern-intro-right-desktop.svg");
    background-size: contain;
    background-repeat: no-repeat;
    width: 23rem;

    height: 90%;
    position: absolute;
    top: 0;
    right: 0;
    z-index: 3;
  }
}

